--- a/scss/bootstrap/_variables.scss
+++ b/scss/bootstrap/_variables.scss
@@ -7,6 +7,9 @@
 //
 // Color system
 //
+@import 'functions';
+
+// @import 'bootstrap/mixins';
 
 $white:    #fff !default;
 $gray-100: #f8f9fa !default;
@@ -71,12 +74,12 @@ $colors: map-merge(
 );
 
 $primary:       #ea728c !default;
-$secondary:     $gray-600 !default;
+$secondary:     #bfa76f !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
-$light:         $gray-100 !default;
+$light:         #f7e1b5 !default;
 $dark:          $gray-800 !default;
 
 // $secondary: #1abb9c;
@@ -171,9 +174,11 @@ $body-color:                $gray-900 !default;
 //
 // Style anchor elements.
 
-$link-color:                theme-color("primary") !default;
+// $link-color:                theme-color("primary") !default;
+$link-color:                $primary !default;
 $link-decoration:           none !default;
 $link-hover-color:          darken($link-color, 15%) !default;
+
 $link-hover-decoration:     underline !default;
 
 // Paragraphs
